<resources>
    <string name="app_name">Словарь терминов</string>
    <string name="term">Абердин – ангусская порода</string>
    <string name="stars">Сайланғанлар</string>
    <string name="about">Мағлиўмат</string>
    <string name="program_info">Программа ҳаққинда</string>
    <string name="info_author"><p> Муҳаммед ал-Хорезмий атындағы Ташкент информациялық технологиялары университети Нөкис филиали оқитиўшиси <bold>Арал Алланазаров</bold>  </p>  <p>
        \nМуҳаммед ал-Хорезмий атындағы Ташкент информациялық технологиялары университети Нөкис филиали студенти <font fgcolor="#ff0000"> <a href="https://t.me/NKamilovich/">Нурлибай Кошкинбаев</a> </font></p></string>
    <string name="info_app"><font> Лексика, әсиресе оның сөзлик фонды бәрқулла өзгерип турады.  Илимниң раўажланыўы менен, техника ҳәм жасаў орнын өзгертиў процессинде ҳәр қыйлы тиллердың белгили дәрежеде лексикаси өзгереди. Соңғы жыллары лингвистика-иззертлеўшилери тәрепинен тараў лексикасын үйрениўге әсиресе шарўа лексикасына, бирден-бир ең әҳмийетли заманагөй ислеп шығарыўшы тараў ретинде үлкен дыққат аўдармақта.
Көпшилик сөзлер ҳәм шарўашылық лексикасындағы түсиниклер жоғалып бармақта. Сол себепли классификация ҳәм шарўашылық лексикасын иззертлеў, әсиресе қарақалпақша сөзлик терминологиясын дүзиў айрықша әҳмийетли есапланады.
Қаракалпақша шаршўашылық терминологиясы сөзлигиниң әмелий нәтийжелери қаракалпақ тилиндеги шарўашылық терминологиясын жетилистириўде, оқыўлық дүзиўде, аўыл-хожалық оқыў орынлари ушын қаракалпақша сөзлик пайда етиўде лексикология бойынша окыў қолланбалар дүзиўде, усы шарўашылық терминлери сөзлиги актуал есапланады.
</font></string>
    <string name="author">Авторлар</string>
    <string name="home">Термин</string>
    <string name="favourite">Сайланғанлар</string>
    <string name="info">Ҳаққимизда</string>
    <string name="search">Изеў</string>
    <string name="glossary">Терминлер</string>
    <string name="definition">Мәниси</string>
    <string name="not_found">Термин табилмади</string>
    <string name="abbreviation">Қысқартпалар</string>
    <string name="abbreviation_text"><font>БЭВ.- без экстрактные вещества\n
ЗЦМ.-заменитель цельного молока\n
К.е.- кормовая единица. 1-кормовая единица равняется по питательности 1кг овса\n
Св.- сухое вещества\n
СОМ.- сухое обезжиренное молоко\n
Sd.- селекционная дифференциал\n
SE.- селекционный эффект\n
РФ.-Российская федерация\n
Руз.-Республика Узбекистан\n
КРС.- крупный рогатый скот\n
МРС.- мелкий рогатый скот\n
Сур.- окраска каракуля\n
УЕС.- условная единица скота (применяется для учетных работ в животноводстве, имеется в виду крупный рогатый скот средней величины, она равнозначна, в условиях Узбекистана, в среднем 5 овцам и козам, 0,8 лошадям и верблюдам, её применение позволяет вести учет животных разного вида, пола и возраста в едином выражении). \n
ПП.- перевариваемый протеин. Это усвояемый белок в организме животных. Измеряется в г/кг.
Ккал.-килокалория\n
Г. - год \n
гг. - годах \n
в.т.ч. - в том числе\n
Т.е. - то есть \n
n. - количество животных\n
М - средняя арифметическая\n
% - процент\n
±n - средняя арифметическая ошибка\n
г/л - грамм, литр\n
</font></string>
    <string name="not_found_fav">Сайланғанлар бос</string>

</resources>