<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/app_main_color"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_collapseMode="pin"
            app:theme="@style/ThemeOverlay.AppCompat"
            app:title="@string/glossary"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topAppBar"
        android:hint="@string/search"
        android:layout_margin="8dp"
        app:hintTextColor="@color/app_main_color"
        app:endIconMode="clear_text"
        app:helperTextTextColor="#D31406"
        app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
        app:startIconDrawable="@drawable/ic_search"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:inputType="text"
            android:maxLength="30"
            android:textColorHint="@color/app_main_color"
            android:textSize="18sp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvWords"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        />

    <TextView
        android:id="@+id/tvNotFound"
        android:text="@string/not_found"
        android:layout_width="wrap_content"
        android:textSize="24dp"
        android:visibility="invisible"
        android:fontFamily="serif-monospace"
        app:layout_constraintStart_toStartOf="@id/rvWords"
        app:layout_constraintEnd_toEndOf="@id/rvWords"
        app:layout_constraintTop_toTopOf="@id/rvWords"
        app:layout_constraintBottom_toBottomOf="@id/rvWords"
        android:layout_height="wrap_content"
        tools:ignore="SpUsage" />

</androidx.constraintlayout.widget.ConstraintLayout>
